--- a/frontend/src/components/Login/styles.module.css
+++ b/frontend/src/components/Login/styles.module.css
@@ -40,6 +40,7 @@
 .form_container h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 25px;
+    font-style: bold;
     margin-top: 0;
 }
 
