--- a/frontend/src/components/Main/styles.module.css
+++ b/frontend/src/components/Main/styles.module.css
@@ -1,12 +1,4 @@
-.navbar {
-    width: 100%;
-    height: 70px;
-    background-color: #3bb19b;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
 .navbar h1 {
     color: white;
     font-size: 25px;
@@ -24,4 +16,5 @@
     font-size: 14px;
     cursor: pointer;
     margin-right: 20px;
+    font-family: 'Poppins', sans-serif;
 }
